--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <div  class="col-md-6">
                         <div class="header-top-content">
                             <ul class="nav nav-pills navbar-left">
-                                <li><a href="#"><i class="pe-7s-call"></i><span>123-123456789</span></a></li>
-                                <li><a href="#"><i class="pe-7s-mail"></i><span> info@mart.com</span></a></li>
+                                <li><a href="#"><i class="pe-7s-call"></i><span>043-789-1234</span></a></li>
+                                <li><a href="#"><i class="pe-7s-mail"></i><span> cpudron@cpu.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -70,12 +70,12 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">page</a></li>
-                            <li><a href="#">shop</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li class="active"><a href="#">중고거래</a></li>
+                            <li><a href="#">동네가게</a></li>
+                            <li><a href="#">동네알바</a></li>
+                            <li><a href="#">부동산직거래</a></li>
+                            <li><a href="#">중고차직거래</a></li>
+                            <li><a href="#">채팅</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right cart-menu">
                         <li><a href="#" class="search-btn"><i class="fa fa-search" aria-hidden="true"></i></a></li>
@@ -115,7 +115,7 @@
                     <div class="item active">
                         <img src="images/slider.jpg" width="1648" height="600" alt="">
                         <div class="carousel-caption">
-                            <h2>당근마켓</h2>
+                            <h2>동네장터</h2>
                             <h3>우리동네 <Span>맞춤장터 </Span></h3>
                             <a href="#">Buy Now</a>
                         </div>
